Upgrade to Java 24 (#111)
+ Support for Java 24
+ This uses Corretto JDK for 24 in GitHub Actions until Temurin is out
+ Remove mentions of Java 23
+ Use JaCoCo Snapshot until full release
+ Upgrade Gradle to 8.13